[package]
name = "raytracer"
version = "0.2.0"
authors = ["Krishna Addepalli <coolkrishna31@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "./katex.html"
]

[dependencies]
rand = "0.9.0"
once_cell = "1.17.0"
embed-doc-image = "0.1.4"
config = "0.15.7"
serde = {version = "1", features = ["derive"]}
serde-aux = "4"
image = "0.25.5"
rayon = "1.6"
slint = "1.9.2"

[dev-dependencies]
timeit = "0.1"
indicatif = "0.17"
scenes = {path= "../scenes" }

[build-dependencies]
slint-build="1.9.2"